--- a/index.html
+++ b/index.html
@@ -5,27 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        h1{
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            color: transparent;
-            text-align: center;
-            -webkit-text-stroke: 2px  #a05f9a;
-            padding: 2em;
-            -moz-user-select: text; /* For Firefox */
-            -webkit-user-select: text; /* For Safari */
-            -ms-user-select: text; /* For Internet Explorer/Edge */
-            user-select: text; 
-        }
-        h1::selection {
-        background: plum; 
-            color: black;/* Custom selection color */
-        -webkit-text-stroke: 2px  transparent;
-
-}
-    </style>
+    
 </head>
 <body>
-    <h1 >Sultan Salahuddin Ayyubi [ Urdu Dubbed ] - Ep 05 - 13 May 2024 - Sponsored By Mezan & Lahore Fans</h1>
+   
+
+
+
+
+    
+    <script src="script.js"></script>
 </body>
 </html>
