--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
     <h2>INCREASE YOUR DIGITAL TWIN TOKEN’S VALUE</h2>
     <h1>DTT data increases the value of your digital asset by lowering operational costs, improving energy use, assisting commercialization, and boosting the liquidity of your building.</h1>
 </div>
-   </div>
+
+   <div class="page7">
+    <canvas></canvas>
+ </div>
 </main>
 
 <!-- CDN OF DIFFERENT LIBRARIES FOR PROJECT-->
