--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
 </div>
 
    <div class="page7">
+    <div class="page7-circle">
+        <div class="page7-cir-inner">
+            
+        </div>
+
+    </div>
     <canvas></canvas>
  </div>
 </main>
